--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./styles/style.css" />
   <title>Timer</title>
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -49,13 +50,14 @@
         <span class="day">Day</span>
         <span class="time-start">Start</span>
         <span class="time-end">End</span>
+        <span class="total-time">Total</span>
       </div>
       <div class="history-body"></div>
       <button class="btn clear-history" type="button">Clear history</button>
     </div>
   </div>
-  <script src="./scripts/timer-control.js"></script>
-  <script src="./scripts/history-control.js"></script>
+  <script type="module" src="./scripts/timer-control.js"></script>
+  <script type="module" src="./scripts/history-control.js"></script>
 </body>
 
 </html>
