add progress line calculation and fix timer logic

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </button>
       <div class="progress">
         <div class="display-time">
-          <span class="timer-hour">30</span>
-          <span class="timer-minute"> min</span>
+          <span class="timer-time">00:30:00</span>
+          <!-- <span class="timer-minute"> min</span> -->
         </div>
       </div>
       <div class="controls">
@@ -36,6 +36,11 @@
           <button title="click to stop timer" class="btn stop" disabled type="button">
             <svg>
               <use href="./images/symbol-defs.svg#icon-stop"></use>
+            </svg>
+          </button>
+          <button title="click to reset timer" class="btn reset" type="button">
+            <svg>
+              <use href="./images/symbol-defs.svg#icon-reset"></use>
             </svg>
           </button>
         </div>
