change clear history btn, copy code in a  history-control file and paste in the timer-control file. delite history-control file

--- a/index.html
+++ b/index.html
@@ -17,30 +17,29 @@
     <div class="timer">
       <button title="click to open history" class="history-control" type="button">Open history
         <svg>
-          <use href="./images/symbol-defs.svg#icon-arrow"></use>
+          <use href="./images/sprite.svg#icon-arrow"></use>
         </svg>
       </button>
       <div class="progress">
         <div class="display-time">
           <span class="timer-time">00:30:00</span>
-          <!-- <span class="timer-minute"> min</span> -->
         </div>
       </div>
       <div class="controls">
         <div class="timer-control">
           <button title="click to start timer" class="btn start" type="button">
             <svg>
-              <use href="./images/symbol-defs.svg#icon-start"></use>
+              <use href="./images/sprite.svg#icon-start"></use>
             </svg>
           </button>
           <button title="click to stop timer" class="btn stop" disabled type="button">
             <svg>
-              <use href="./images/symbol-defs.svg#icon-stop"></use>
+              <use href="./images/sprite.svg#icon-stop"></use>
             </svg>
           </button>
           <button title="click to reset timer" class="btn reset" type="button">
             <svg>
-              <use href="./images/symbol-defs.svg#icon-reset"></use>
+              <use href="./images/sprite.svg#icon-reset"></use>
             </svg>
           </button>
         </div>
@@ -51,18 +50,23 @@
       </div>
     </div>
     <div class="history">
-      <div class="history-element">
+
+      <button class="btn clear-history" type="button">
+        <svg>
+          <use xlink:href="./images/sprite.svg#icon-eraser"></use>
+        </svg>
+      </button>
+      <div class="history-element header">
         <span class="day">Day</span>
         <span class="time-start">Start</span>
         <span class="time-end">End</span>
         <span class="total-time">Total</span>
       </div>
       <div class="history-body"></div>
-      <button class="btn clear-history" type="button">Clear history</button>
     </div>
   </div>
   <script type="module" src="./scripts/timer-control.js"></script>
-  <script type="module" src="./scripts/history-control.js"></script>
+  <!-- <script type="module" src="./scripts/history-control.js"></script> -->
 </body>
 
 </html>
