--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </div>
     <div class="history">
 
-      <button class="btn clear-history" type="button">
+      <button class="btn clear-history" type="button" title="click to clear timer history" >
         <svg>
-          <use xlink:href="./images/sprite.svg#icon-eraser"></use>
+          <use href="./images/sprite.svg#icon-eraser"></use>
         </svg>
       </button>
       <div class="history-element header">
