delete worker. add important message

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <p class="message">Importantly! If the tab is inactive, the browser blocks the timer.</p>
   <div class="wrapper">
     <div class="timer">
       <button title="click to open history" class="history-control" type="button">Open history
@@ -65,8 +66,7 @@
       <div class="history-body"></div>
     </div>
   </div>
-  <script type="module" src="./scripts/timer-control.js"></script>
-  <!-- <script type="module" src="./scripts/history-control.js"></script> -->
+  <script src="./scripts/timer-control.js"></script>
 </body>
 
 </html>
